--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,13 @@ dependencies:
   # Maps (OpenStreetMap - no API key required)
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
-  
+
+  # HTTP client for Overpass API (PATH map data)
+  http: ^1.1.0
+
+  # WiFi scanning for fingerprinting
+  wifi_scan: ^0.4.1
+
   # State management
   provider: ^6.1.1
   
