--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=C:\\Users\\whdgu\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\dev\\flutter
+flutter.buildMode=release
+flutter.versionName=1.0.0
+flutter.versionCode=1
